clang/test/BSC/Positive/SafeZone/function_pointer_incompatible_warning/function_pointer_incompatible_warning.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

void foo(int);
void bar(int);

int (*global_fp)(void) = foo;
// expected-warning@-1 {{incompatible function pointer types initializing 'int (*)(void)' with an expression of type 'void (int)'}}

void test_non_safe_function_pointer_warning(void) {
  int (*fp)(void) = foo;
  // expected-warning@-1 {{incompatible function pointer types initializing 'int (*)(void)' with an expression of type 'void (int)'}}
  fp = bar;
  // expected-warning@-1 {{incompatible function pointer types assigning to 'int (*)(void)' from 'void (int)'}}
  (void)fp;
}
